--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.dawidmotyka</groupId>
     <artifactId>cryptonoseengine</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <build>
         <plugins>
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>com.dawidmotyka</groupId>
             <artifactId>exchangeutils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.dawidmotyka</groupId>
